--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
-
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
-SECRET_KEY=
+DEBUG =
+SUPABASE_URL=
+
+SUPABASE_API_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_JWT_SECRET=nT0Hg=
+
+
+SUPABASE_REST_URL=
