--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-# SUBSTITUIR O requirements.txt EXISTENTE POR ESTE CONTEÚDO
-# Requirements atualizados para ourfinancetracker com correções de segurança
+# Requirements corrigidos para ourfinancetracker – compatível com django-cachalot
 
 # Django e extensões essenciais
-Django==5.2.1
+Django==5.1.4
 django-extensions==3.2.3
 
 # Base de dados
@@ -53,25 +52,10 @@ pytest-django==4.8.0
 pytest-cov==5.0.0
 
 # Performance
-django-cachalot==2.6.3
+django-cachalot==2.6.3  # Requer Django <5.2
 
 # Logs estruturados
 django-structlog==8.1.0
 
 # Backup e utilitários
 django-dbbackup==4.2.0
-
-# NOTAS IMPORTANTES:
-# 1. python-dotenv: OBRIGATÓRIO para ler ficheiros .env
-# 2. redis + django-redis: Para cache segura em produção  
-# 3. psycopg2-binary: Para PostgreSQL
-# 4. pandas + openpyxl: Para funcionalidades de import/export existentes
-# 5. django-debug-toolbar: Apenas para desenvolvimento
-
-# INSTALAÇÃO:
-# pip install -r requirements.txt
-
-# PARA PRODUÇÃO, remover estas dependências de desenvolvimento:
-# - django-debug-toolbar
-# - flake8, black, isort
-# - pytest, pytest-django, pytest-cov
