--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = ourfinancetracker_site.test_settings
-python_files = test_*.py
-addopts = --nomigrations
+DJANGO_SETTINGS_MODULE = ourfinancetracker_site.settings
+addopts = --cov=core --cov-report=html --cov-report=term-missing -v
+python_files = tests.py test_*.py *_tests.py
+python_classes = Test*
+python_functions = test_*
