--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ addopts = --cov=core --cov-report=html --cov-report=term-missing -v
 python_files = tests.py test_*.py *_tests.py
 python_classes = Test*
 python_functions = test_*
+addopts = --reuse-db --create-db
