--- a/requirements.txt
+++ b/requirements.txt
@@ -57,4 +57,9 @@ django-structlog==8.1.0
 
 # Backup e utilitários
 django-dbbackup==4.2.0
+
+
+
+#others
 django-widget-tweaks==1.5.0
+PyJWT==2.8.0
