--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,34 @@ SUPABASE_JWT_SECRET=nT0Hg=
 
 
 SUPABASE_REST_URL=
+# ────────────────────────────────────────────────────
+# Core Django Settings
+# ────────────────────────────────────────────────────
+SECRET_KEY=your-secret-key-here
+DEBUG=True
+
+# ────────────────────────────────────────────────────
+# Debug & Logging Settings
+# ────────────────────────────────────────────────────
+SHOW_DEBUG_TOOLBAR=False
+
+# Email configuration (choose one)
+# For development - Console backend (prints emails to console)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+
+# For production - SMTP backend
+# EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USE_TLS=True
+# EMAIL_HOST_USER=your-email@gmail.com
+# EMAIL_HOST_PASSWORD=your-app-password
+
+# For production - Resend API
+# EMAIL_BACKEND=django_resend.mail.EmailBackend
+# RESEND_API_KEY=your-resend-api-key
+
+DEFAULT_FROM_EMAIL=noreply@ourfinancetracker.com
+
+# Domain for password reset links (forces HTTPS)
+EMAIL_LINK_DOMAIN=ourfinancetracker.com
