--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,59 @@
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-DEBUG =
-SUPABASE_URL=
 
-SUPABASE_API_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-SUPABASE_JWT_SECRET=nT0Hg=
+# ── Django ─────────────────────────────────────────────────────────────
+# Use "True" only in local development.
+DEBUG=False
+# Generate a strong key for real deployments.
+SECRET_KEY=replace-with-a-strong-random-string
 
+# Comma-separated list (no spaces).
+ALLOWED_HOSTS=ourfinancetracker.com,.ourfinancetracker.com,127.0.0.1,localhost
+# Comma-separated list of HTTPS origins.
+CSRF_TRUSTED_ORIGINS=https://ourfinancetracker.com,https://*.ourfinancetracker.com
+# If running behind a TLS-terminating proxy (e.g., Cloudflare/Ingress), keep this:
+SECURE_PROXY_SSL_HEADER=HTTP_X_FORWARDED_PROTO,https
 
-SUPABASE_REST_URL=
-# ────────────────────────────────────────────────────
-# Core Django Settings
-# ────────────────────────────────────────────────────
-SECRET_KEY=your-secret-key-here
-DEBUG=True
+# ── Database (Postgres / Supabase) ────────────────────────────────────
+DB_NAME=postgres
+DB_USER=postgres.username
+DB_PASSWORD=replace-me
+DB_HOST=your-postgres-hostname
+DB_PORT=5432
 
-# ────────────────────────────────────────────────────
-# Debug & Logging Settings
-# ────────────────────────────────────────────────────
-SHOW_DEBUG_TOOLBAR=False
+# ── Supabase (server-side only — do NOT commit real secrets) ──────────
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_REST_URL=https://your-project-id.supabase.co/rest/v1
+# Public anon key (OK to use in server code; do not expose client-side unless needed)
+SUPABASE_API_KEY=replace-me
+# HIGHLY SENSITIVE — keep only on the server
+SUPABASE_SERVICE_ROLE_KEY=replace-me
+SUPABASE_JWT_SECRET=replace-me
 
-# Email configuration (choose one)
-# For development - Console backend (prints emails to console)
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+# ── Email (choose ONE: SMTPS:465 OR STARTTLS:587) ─────────────────────
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+# Recommended: dedicated mail host with matching certificate
+EMAIL_HOST=mail.ourfinancetracker.com
 
-# For production - SMTP backend
-# EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-# EMAIL_HOST=smtp.gmail.com
+# Option A — SMTPS (implicit TLS)
+EMAIL_PORT=465
+EMAIL_USE_SSL=True
+EMAIL_USE_TLS=False
+
+# Option B — STARTTLS (explicit TLS)
 # EMAIL_PORT=587
+# EMAIL_USE_SSL=False
 # EMAIL_USE_TLS=True
-# EMAIL_HOST_USER=your-email@gmail.com
-# EMAIL_HOST_PASSWORD=your-app-password
 
-# For production - Resend API
-# EMAIL_BACKEND=django_resend.mail.EmailBackend
-# RESEND_API_KEY=your-resend-api-key
+EMAIL_HOST_USER=noreply@ourfinancetracker.com
+EMAIL_HOST_PASSWORD=replace-me
+DEFAULT_FROM_EMAIL=OurFinanceTracker <noreply@ourfinancetracker.com>
+SERVER_EMAIL=postmaster@ourfinancetracker.com
+EMAIL_TIMEOUT=20
 
-DEFAULT_FROM_EMAIL=noreply@ourfinancetracker.com
-
-# Domain for password reset links (forces HTTPS)
+# Used to build absolute links in emails (password reset, confirmations, etc.)
 EMAIL_LINK_DOMAIN=ourfinancetracker.com
+
+# ── Optional security/DNS (document only; set in DNS, not here) ───────
+# SPF (DNS TXT @):      v=spf1 a mx ip4:YOUR_SENDING_IP ~all
+# DKIM:                 enable in Plesk and publish TXT shown by Plesk
+# DMARC (DNS TXT _dmarc): v=DMARC1; p=quarantine; rua=mailto:dmarc@ourfinancetracker.com; fo=1; adkim=s; aspf=s
+# DANE:                 enable DNSSEC and publish TLSA records provided by Plesk
