--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,20 @@
 services:
   - type: web
     name: ourfinancetracker
-    env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn ourfinancetracker_site.wsgi"
+    runtime: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn ourfinancetracker_site.wsgi:application --bind 0.0.0.0:$PORT
+    healthCheckPath: /
     envVars:
-      - key: DB_NAME
-        value: postgres
-      - key: DB_USER
-        value: ${DB_USER}
-      - key: DB_PASSWORD
-        value: ${DB_PASSWORD}
-      - key: DB_HOST
-        value: ${DB_HOST}
-      - key: DB_PORT
-        value: 6543
+      - key: DATABASE_URL
+        fromDatabase:
+          name: oft-db
+          property: connectionString
       - key: SECRET_KEY
-        value: ${SECRET_KEY}
+        sync: false          # defines no YAML; preenches no Dashboard
+      - key: ALLOWED_HOSTS
+        value: ourfinancetracker.onrender.com,ourfinancetracker.com
+
+databases:
+  - name: oft-db
+    plan: free
