Secure activation tokens

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ CSRF_TRUSTED_ORIGINS=https://ourfinancetracker.com,https://*.ourfinancetracker.c
 # If running behind a TLS-terminating proxy (e.g., Cloudflare/Ingress), keep this:
 SECURE_PROXY_SSL_HEADER=HTTP_X_FORWARDED_PROTO,https
 
+# Account activation token lifetime in seconds (default: 900)
+ACCOUNT_ACTIVATION_TOKEN_EXPIRATION_SECONDS=900
+
 # ── Database (Postgres / Supabase) ────────────────────────────────────
 DB_NAME=postgres
 DB_USER=postgres.username
