--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,7 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = ourfinancetracker_site.settings
-# Combine testing options in a single addopts entry to avoid duplicate
-# configuration keys, which cause pytest to error out.
-addopts = --cov=core --cov-report=html --cov-report=term-missing -v --reuse-db --create-db
+DJANGO_SETTINGS_MODULE = ourfinancetracker_site.settings_test
 python_files = tests.py test_*.py *_tests.py
-python_classes = Test*
-python_functions = test_*
+# Uncomment to see Django warnings once during test runs:
+# filterwarnings =
+#     error
+#     ignore::DeprecationWarning
