--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-redis==5.4.0
 # Security and authentication
 django-axes==6.5.1
 django-ratelimit==4.1.0
+django-csp==3.8
 argon2-cffi==23.1.0
 PyJWT==2.10.1
 
