--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,10 @@ xlsxwriter==3.2.0
 # Date processing
 python-dateutil==2.9.0.post0
 
+# Task queue
+celery==5.3.6
+django-celery-beat==2.6.0
+
 # Development and debug
 django-debug-toolbar==4.4.6
 
