--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,9 @@ pytz==2025.2
 # Structured logging
 django-structlog==9.1.1
 
+# Error monitoring
+sentry-sdk==2.19.2
+
 # Backup utilities
 django-dbbackup==4.3.0
 
